--- a/pkg/dashboard/index.html
+++ b/pkg/dashboard/index.html
@@ -1,63 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!doctype html>
+<html lang="en" class="h-100">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>KubeOne Dashboard</title>
-</head>
-
-<body>
-
-    <h1>KubeOne Dashboard</h1>
-
-    <h2>Nodes</h2>
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Status</th>
-            <th>Roles</th>
-            <th>Age</th>
-            <th>Version</th>
-        </tr>
-        {{ range .Nodes }}
-        <tr>
-            <td>{{ .Name }}</td>
-            <td>{{ .Status }}</td>
-            <td>{{ .Roles }}</td>
-            <td>{{ .Age }}</td>
-            <td>{{ .Version }}</td>
-        </tr>
-        {{ end }}
-    </table>
-
-    <h2>MachineDeployments</h2>
-    <table>
-        <tr>
-            <th>Namespace</th>
-            <th>Name</th>
-            <th>Replicas</th>
-            <th>Available-Replicas</th>
-            <th>Provider</th>
-            <th>OS</th>
-            <th>Kubelet</th>
-            <th>Age</th>
-        </tr>
-        {{ range .MachineDeployments }}
-        <tr>
-            <td>{{ .Namespace }}</td>
-            <td>{{ .Name }}</td>
-            <td>{{ .Replicas }}</td>
-            <td>{{ .AvailableReplicas }}</td>
-            <td>{{ .Provider }}</td>
-            <td>{{ .OS }}</td>
-            <td>{{ .Kubelet }}</td>
-            <td>{{ .Age }}</td>
-        </tr>
-        {{ end }}
-    </table>
-
-
-</body>
-
+  </head>
+  <body class="d-flex flex-column h-100">
+  <header class="navbar navbar-expand-lg sticky-top bd-navbar border-bottom py-3 bg-body px-4 shadow-sm">
+    <nav class="container-l bd-gutter d-flex flex-wrap flex-lg-nowrap align-items-center">
+      <img src="assets/kubeone-logo.png" alt="logo" style="height: 30px;"/>
+      <h4 class="mx-3 my-0">Dashboard</h4>
+    </nav>
+  </header>
+  <main class="flex-shrink-0 p-4 bg-body-tertiary flex-grow-1">
+    <div class="container-l d-flex flex-column h-100">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h4 class="card-title pb-2">Nodes</h4>
+          <div class="row row-cols-1 row-cols-md-4 g-3">
+            {{ range .Nodes }}
+            <div class="col">
+              <div class="card">
+                <div class="card-header">
+                  {{.Name}}
+                  <span class="badge border text-bg-light rounded-pill mx-2">{{.Status}}</span>
+                </div>
+                <div class="card-body">
+                  <div class="row row-cols-2 g-2">
+                    <div class="col-4"><strong>Version</strong></div>
+                    <div class="col">{{.Version}}</div>
+                    <div class="col-4"><strong>Roles</strong></div>
+                    <div class="col">{{.Roles}}</div>
+                    <div class="col-4"><strong>Age</strong></div>
+                    <div class="col">{{.Age}}</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {{ end }}
+          </div>
+        </div>
+      </div>
+      <div class="card mt-4 shadow-sm">
+        <div class="card-body">
+          <h4 class="card-title pb-2">Machine Deployments</h4>
+          <div class="mt-2">
+            <table class="table table-hover">
+              <thead>
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Namespace</th>
+                <th scope="col">Replicas</th>
+                <th scope="col">Provider</th>
+                <th scope="col">OS</th>
+                <th scope="col">Kubelet</th>
+                <th scope="col">Age</th>
+              </tr>
+              </thead>
+              <tbody>
+              {{ range .MachineDeployments }}
+              <tr>
+                <td>{{ .Name }}</td>
+                <td>{{ .Namespace }}</td>
+                <td>{{ .AvailableReplicas }} / {{ .Replicas }}</td>
+                <td>{{ .Provider }}</td>
+                <td>{{ .OS }}</td>
+                <td>{{ .Kubelet }}</td>
+                <td>{{ .Age }}</td>
+              </tr>
+              {{ end }}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="footer mt-auto py-3 border-top">
+    <div class="container-l px-4">
+      <span class="text-body-secondary">Powered by Kubermatic</span>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+          integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+          crossorigin="anonymous"></script>
+  </body>
 </html>
