--- a/pkg/dashboard/index.html
+++ b/pkg/dashboard/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="assets/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>KubeOne Dashboard</title>
@@ -10,7 +10,7 @@
   <body class="d-flex flex-column h-100">
   <header class="navbar navbar-expand-lg sticky-top bd-navbar border-bottom py-3 bg-body px-4 shadow-sm">
     <nav class="container-l bd-gutter d-flex flex-wrap flex-lg-nowrap align-items-center">
-      <img src="assets/kubeone-logo.png" alt="logo" style="height: 30px;"/>
+      <img src="/assets/kubeone-logo.png" alt="logo" style="height: 30px;"/>
       <h4 class="mx-3 my-0">Dashboard</h4>
     </nav>
   </header>
