dashboard: last seen time
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/pkg/dashboard/index.html
+++ b/pkg/dashboard/index.html
@@ -101,7 +101,7 @@
         <div class="row row-cols-2 g-2">
           <div class="col-4"><strong>Version</strong></div>
           <div class="col">{{.Version}}</div>
-          <div class="col-4"><strong>LastHeartbeatTime</strong></div>
+          <div class="col-4"><strong>Seen</strong></div>
           <div class="col">{{.LastHeartbeatTime}}</div>
         </div>
       </div>
