filter machines by machinedeployment

--- a/pkg/dashboard/index.html
+++ b/pkg/dashboard/index.html
@@ -65,6 +65,7 @@
                         <td>{{ .Kubelet }}</td>
                         <td>{{ .Address }}</td>
                         <td>{{ .Age }}</td>
+                        <td>{{ .Deleted }}</td>
                     </tr>
                     {{ end }}
                 </table>
