--- a/pkg/dashboard/index.html
+++ b/pkg/dashboard/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="refresh" content="10">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>KubeOne Dashboard</title>
   </head>
@@ -15,7 +16,7 @@
     </nav>
   </header>
   <main class="flex-shrink-0 p-4 bg-body-tertiary flex-grow-1">
-    <div class="container-l d-flex flex-column h-100">
+    <div class="container-l d-flex flex-column h-100 gap-4">
       <div class="card shadow-sm">
         <div class="card-body">
           <h4 class="card-title pb-2">Control-Plane Nodes</h4>
@@ -28,17 +29,17 @@
         </div>
         {{ end }}
       </div>
-      <div class="card mt-4 shadow-sm">
+      <div class="card shadow-sm">
         <div class="card-body">
           <h4 class="card-title pb-2">Machine Deployments</h4>
           <div class="mt-2">
-            <table class="table table-hover">
+            <table class="table">
               <thead>
               <tr>
+                <th scope="col">Status</th>
                 <th scope="col">Name</th>
                 <th scope="col">Namespace</th>
                 <th scope="col">Replicas</th>
-                <th scope="col">Provider</th>
                 <th scope="col">OS</th>
                 <th scope="col">Kubelet</th>
                 <th scope="col">Age</th>
@@ -46,29 +47,59 @@
               </thead>
               <tbody>
               {{ range .MachineDeployments }}
-              <tr>
-                <td>{{ .Name }}</td>
+              <tr class="table-light shadow-sm">
+                <td>
+                  <div class="d-flex">
+                    {{ template "status-pill" "Ready" }}
+                  </div>
+                </td>
+                <td><strong>{{ .Name }}</strong></td>
                 <td>{{ .Namespace }}</td>
                 <td>{{ .AvailableReplicas }} / {{ .Replicas }}</td>
-                <td>{{ .Provider }}</td>
                 <td>{{ .OS }}</td>
                 <td>{{ .Kubelet }}</td>
                 <td>{{ .Age }}</td>
-                <table>
-                    {{ range .Machines }}
+              </tr>
+              <tr>
+                <td colspan="7" class="p-0">
+                  <h5 class="p-2 m-0">Machines</h5>
+                  <table class="table">
+                    <thead>
                     <tr>
-                        <td>{{ .Namespace }}</td>
-                        <td>{{ .Name }}</td>
-                        <td>{{ .Provider }}</td>
-                        <td>{{ .OS }}</td>
-                        <td>{{ .Node }}</td>
-                        <td>{{ .Kubelet }}</td>
-                        <td>{{ .Address }}</td>
-                        <td>{{ .Age }}</td>
-                        <td>{{ .Deleted }}</td>
+                      <th scope="col">Status</th>
+                      <th scope="col">Name</th>
+                      <th scope="col">Namespace</th>
+                      <th scope="col">OS</th>
+                      <th scope="col">Node</th>
+                      <th scope="col">Kubelet</th>
+                      <th scope="col">Address</th>
+                      <th scope="col">Age</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{ range .Machines }}
+                    <tr class="{{ if not .Deleted }}{{ else }}table-danger{{ end }}">
+                      <td>
+                        <div class="d-flex">
+                          {{ if not .Deleted }}
+                          {{ template "status-pill" "Ready" }}
+                          {{ else }}
+                          {{ template "status-pill" "Deleting" }}
+                          {{ end }}
+                        </div>
+                      </td>
+                      <td>{{ .Namespace }}</td>
+                      <td>{{ .Name }}</td>
+                      <td>{{ .OS }}</td>
+                      <td>{{ .Node }}</td>
+                      <td>{{ .Kubelet }}</td>
+                      <td>{{ .Address }}</td>
+                      <td>{{ .Age }}</td>
                     </tr>
                     {{ end }}
-                </table>
+                    </tbody>
+                  </table>
+                </td>
               </tr>
               {{ end }}
               </tbody>
@@ -83,20 +114,32 @@
       <span class="text-body-secondary">Powered by Kubermatic</span>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-          integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
           crossorigin="anonymous"></script>
+  <script>
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+  </script>
   </body>
 </html>
+
+{{define "status-pill"}}
+<span role="button" class="text-bg-{{ if not . }}secondary{{ else if eq . `Ready` }}success{{ else }}danger{{ end }} rounded-circle" style="width:20px; height: 20px" data-bs-toggle="tooltip" title="{{ if not . }}Unknown{{ else }}{{ . }}{{ end }}"></span>
+{{end}}
+
+{{define "status-badge"}}
+<span class="badge text-bg-{{ if not . }}secondary{{ else if eq . `Ready` }}success{{ else }}danger{{ end }} rounded-pill">{{ . }}</span>
+{{end}}
 
 {{ define "nodes" }}
 <div class="row row-cols-1 row-cols-md-4 g-3">
   {{ range . }}
   <div class="col">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header d-flex align-items-center gap-2">
+        {{ template "status-pill" .Status }}
         {{.Name}}
-        <span class="badge border text-bg-light rounded-pill mx-2">{{.Status}}</span>
       </div>
       <div class="card-body">
         <div class="row row-cols-2 g-2">
@@ -106,9 +149,25 @@
           <div class="col">{{.LastHeartbeatTime}}</div>
           {{ if .IsControlPlane }}
           <div class="col-4"><strong>etcd</strong></div>
-          <div class="col">{{.EtcdOK}}</div>
+          <div class="col">
+            <div class="d-flex">
+              {{ if not .EtcdOK }}
+              {{ template "status-badge" "Not Ready" }}
+              {{ else }}
+              {{ template "status-badge" "Not Ready" }}
+              {{ end}}
+            </div>
+          </div>
           <div class="col-4"><strong>apiserver</strong></div>
-          <div class="col">{{.APIServerOK}}</div>
+          <div class="col">
+            <div class="d-flex">
+              {{ if not .APIServerOK }}
+              {{ template "status-badge" "Not Ready" }}
+              {{ else }}
+              {{ template "status-badge" "Ready" }}
+              {{ end}}
+            </div>
+          </div>
           {{ end }}
         </div>
       </div>
